longhorn/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`longhorn.example.com`)
    services:
    - name: longhorn-frontend
      port: 80
  tls:
    secretName: longhorn-tls
